[workspace]
members = [
    "hooch-macro",
    "."
]

[package]
name = "hooch1"
version = "0.1.6"
authors = ["Bartek"]
description = "A small async runtime that's been bootlegged for my projects."
license = "Apache-2.0"
repository = "https://github.com/bwintertkb/hooch"
readme = "README.md"
keywords = ["async", "futures", "io", "non-blocking"]
categories = ["asynchronous"]
edition = "2024"




[dependencies]
mio = { version = "1.0.4", features = ["os-ext", "net", "os-poll"] }
nix = { version = "0.30.1", features = ["time"] }
hooch-macro = "*"
dashmap = "*"